<resources>
    <string name="app_name">ToDo</string>

    <string name="notification_channel_id">ToDo</string>

    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_time">Time</string>
    <string name="label_date">Date</string>
    <string name="label_types">Types</string>
    <string name="label_daily">Daily</string>
    <string name="label_weekly">Weekly</string>
    <string name="label_create">Create</string>
    <string name="label_list_todo">List of ToDos</string>
    <string name="label_create_todo">Create ToDo</string>
    <string name="error_enter_email">Enter email</string>
    <string name="error_enter_valid_email">Enter valid email</string>
    <string name="error_enter_password">Enter password</string>
    <string name="error_enter_title">Enter title</string>
    <string name="error_enter_description">Enter description</string>
    <string name="error_select_time">Select time</string>
    <string name="error_select_date">Select date</string>
    <string name="error_select_types">Select types</string>
    <string name="error_no_data_available">No data available</string>
    <string name="msg_no_internet_connection">No internet connection</string>
    <string name="msg_todo_create_success">ToDo created successfully</string>
    <string name="msg_item_delete_success">Item deleted successfully</string>
    <string name="msg_do_you_want_delete_item">Do you want to delete this item?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
</resources>
